# carevisit

./: .env  .env.sample  .gitignore  README.md  manage.py  pyproject.toml
CareVisitService/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
applications/accounts/: admin.py  apps.py  models.py
applications/accounts/migrations/: 0001_initial.py
applications/patient_visits/: admin.py  apps.py  filters.py  managers.py  models.py  serializers.py  tasks.py  urls.py  views.py
applications/patient_visits/migrations/: 0001_initial.py  0002_controlsequence_alter_visit_options_and_more.py  0003_delete_controlsequence.py
applications/utils/: apps.py  models.py
applications/utils/management/commands/: prefill_control_sequences.py
applications/utils/migrations/: 0001_initial.py
